@@ -24,6 +24,7 @@ Bug fixes:
   in the default theme to PNG
 - #1274 fixed the rendering of the portlet box edit form
 - Removed dependency to CPSBoxes property cps_is_portalbox in profile
+- expire the cache entries when the portlet box templet is updated.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Got rid of some warnings in test output.
